# gopher-squeeze

./: .gitignore  Gopher.cabal  Makefile  README.md  flake.nix  gopher.go  main.c
app/: Main.hs
lib/: Gopher.hs
